# puzzle-block-ai

./: CMakeLists.txt  Makefile  README.md  build.xml
nbproject/: build-impl.xml  genfiles.properties  project.properties  project.xml
nbproject/private/: private.properties  private.xml
src/: CMakeLists.txt
src/puzzleblock/: Block.java  Board.java  Effect.java  PuzzleBlock.java  PuzzleBlock_AI.java
src/puzzleblock/c++/: puzzleblock.cpp  puzzleblock.h  puzzleblock_PuzzleBlock_AI.h  routefinding.cpp  routefinding.h
src/puzzleblock/c++/demo/: test.cpp  thread_search.cpp
